--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "php": "^8.4",
+        "php": "^8.3",
         "filament/filament": "^4.0",
         "illuminate/contracts": "^11.0||^12.0",
         "phiki/phiki": "^2.0",
@@ -49,9 +49,9 @@
         "post-autoload-dump": "@composer run prepare",
         "prepare": "@php vendor/bin/testbench package:discover --ansi",
         "analyse": "vendor/bin/phpstan analyse",
-        "test": "vendor/bin/pest",
-        "test-coverage": "vendor/bin/pest --coverage",
-        "format": "vendor/bin/pint"
+        "test": "vendor/bin/pest --parallel --compact",
+        "test-coverage": "vendor/bin/pest --coverage --parallel --compact",
+        "format": "vendor/bin/pint --parallel"
     },
     "config": {
         "sort-packages": true,
