chore: update development dependencies and adjust PHPUnit configuration

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -6,9 +6,10 @@
     bootstrap="vendor/autoload.php"
     colors="true"
     processIsolation="false"
+    stopOnError="false"
     stopOnFailure="false"
     executionOrder="random"
-    failOnWarning="true"
+    failOnWarning="false"
     failOnRisky="true"
     failOnEmptyTestSuite="true"
     beStrictAboutOutputDuringTests="true"
